2007-09-05  David Harrison  <harrison@apple.com>

        Reviewed by Kevin Decker.

        Testcase for:
        <rdar://problem/5306171> Mail: The first return after an attachment in multipart/mixed message is lost

        * editing/selection/toString-1-expected.txt: Added.
        * editing/selection/toString-1.html: Added.

2007-09-04  Oliver Hunt  <oliver@apple.com>

        RS=Adam
        
        Moving a number of mac specific tests into LayoutTests/platform/mac so that they
        don't need to be in the windows Skiplist.
        
        This includes most of the tests that used textInputController as it is a test
        of the mac-specific NSTextInput API.

        * editing/deleting/5300379-expected.checksum: Removed.
        * editing/deleting/5300379-expected.png: Removed.
        * editing/deleting/5300379-expected.txt: Removed.
        * editing/deleting/5300379.html: Removed.
        * editing/deleting/delete-to-end-of-paragraph-expected.checksum: Removed.
        * editing/deleting/delete-to-end-of-paragraph-expected.png: Removed.
        * editing/deleting/delete-to-end-of-paragraph-expected.txt: Removed.
        * editing/deleting/delete-to-end-of-paragraph.html: Removed.
        * editing/deleting/smart-delete-003-expected.checksum: Removed.
        * editing/deleting/smart-delete-003-expected.png: Removed.
        * editing/deleting/smart-delete-003-expected.txt: Removed.
        * editing/deleting/smart-delete-003.html: Removed.
        * editing/deleting/smart-delete-004-expected.checksum: Removed.
        * editing/deleting/smart-delete-004-expected.png: Removed.
        * editing/deleting/smart-delete-004-expected.txt: Removed.
        * editing/deleting/smart-delete-004.html: Removed.
        * editing/execCommand/nsresponder-indent-expected.checksum: Removed.
        * editing/execCommand/nsresponder-indent-expected.png: Removed.
        * editing/execCommand/nsresponder-indent-expected.txt: Removed.