@@ -551,7 +551,6 @@ window.Event.prototype.SELECT [number]
 window.Event.prototype.initEvent [function]
 window.Event.prototype.preventDefault [function]
 window.Event.prototype.stopPropagation [function]
-window.GCController [object RuntimeObject]
 window.HTMLAnchorElement [object HTMLAnchorElementConstructor]
 window.HTMLAnchorElement.prototype [printed above as window.Element.prototype]
 window.HTMLAppletElement [object HTMLAppletElementConstructor]
@@ -884,7 +883,6 @@ window.XSLTProcessor.prototype.transformToDocument [function]
 window.XSLTProcessor.prototype.transformToFragment [function]
 window.addEventListener [function]
 window.alert [function]
-window.appleScriptController [object RuntimeObject]
 window.atob [function]
 window.blur [function]
 window.btoa [function]
@@ -918,7 +916,6 @@ window.defaultstatus [string]
 window.devicePixelRatio [number]
 window.document [printed above as window.Document.prototype]
 window.event [undefined]
-window.eventSender [object RuntimeObject]
 window.find [function]
 window.flushLog [function]
 window.focus [function]
@@ -957,10 +954,7 @@ window.menubar.visible [boolean]
 window.moveBy [function]
 window.moveTo [function]
 window.name [string]
-window.navigationController [object RuntimeObject]
 window.navigator [printed above as window.clientInformation]
-window.objCPlugin [object RuntimeObject]
-window.objCPluginFunction [function]
 window.offscreenBuffering [boolean]
 window.onabort [null]
 window.onbeforeunload [null]
@@ -1028,7 +1022,6 @@ window.status [string]
 window.statusbar [object BarInfo]
 window.statusbar.visible [boolean]
 window.stop [function]
-window.textInputController [object RuntimeObject]
 window.toolbar [object BarInfo]
 window.toolbar.visible [boolean]
 window.top [printed above as window]
